main-menu z-index fixed

--- a/scss/_custom-settings.scss
+++ b/scss/_custom-settings.scss
@@ -582,7 +582,7 @@ hr {
 .flex-spacer-left {
   margin-left: auto;
 }
-nav {
+.main-menu {
   background-color: #fff;
   position: relative;
   z-index: 1000;
